--- a/index.html
+++ b/index.html
@@ -2,11 +2,14 @@
 <html lang="en">
     <head>
         <meta charset="UFT-8">
+        <title>ST United - United to grow up</title>
+        <!-- Favicon -->
+        <link rel="icon" type="img/png" sizes="32x32" href="img/stunited.png">
         <link rel="stylesheet" type="text/css" href="style.css">
         <link rel="stylesheet" href="text/css" href="bootstrap/css/bootstrap.css">
     </head>
     <Body>
-
+    
         <!-- Script file link -->
         <script src="bootstrap/js/bootstrap.js"></script>
     </Body>
